--- a/warp-runner/Cargo.toml
+++ b/warp-runner/Cargo.toml
@@ -1,13 +1,17 @@
 [package]
 name = "warp-runner"
-version = "0.3.0"
+version = "0.4.0"
 authors = ["Diego Giagio <diego@giagio.com>"]
+edition = "2021"
 
 [dependencies]
-memmem = "0.1.1"
+anyhow = "1.0"
+bincode = "1.3"
+dirs = "4.0"
 flate2 = "1.0"
-tar = "0.4"
-dirs = "1.0.4"
-winapi = "0.3.6"
 log = "0.4.5"
-simple_logger = "1.0.1"
+memmem = "0.1.1"
+remove_dir_all = "0.7"
+simple_logger = "4.0"
+tar = "0.4"
+warp-args = { path = "../warp-args" }
