--- a/warp-packer/Cargo.toml
+++ b/warp-packer/Cargo.toml
@@ -1,13 +1,15 @@
 [package]
 name = "warp-packer"
-version = "0.3.0"
-authors = ["Diego Giagio <diego@giagio.com>"]
+version = "1.0.0"
+authors = ["Diego Giagio <diego@giagio.com>", "Reisz", "kirbylink"]
+edition = "2021"
 
 [dependencies]
-clap = "2.32.0"
-dirs = "1.0.4"
-reqwest = "0.9.2"
-tempdir = "0.3.7"
+bincode = "1.3"
+clap = { version = "4.0", features = ["derive"] }
 flate2 = "1.0"
-tar = "0.4"
 lazy_static = "1.1.0"
+tar = "0.4"
+tempdir = "0.3.7"
+uuid = { version = "1.2", features = ["v4"] }
+warp-args = { path = "../warp-args" }
