--- a/warp-packer/Cargo.toml
+++ b/warp-packer/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "warp-packer"
-version = "0.4.0"
-authors = ["Diego Giagio <diego@giagio.com>"]
+version = "1.0.0"
+authors = ["Diego Giagio <diego@giagio.com>", "Reisz", "kirbylink"]
 edition = "2021"
 
 [dependencies]
