--- a/warp-runner/Cargo.toml
+++ b/warp-runner/Cargo.toml
@@ -7,11 +7,11 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0"
 bincode = "1.3"
-dirs = "4.0"
+directories = "6.0"
 flate2 = "1.0"
 log = "0.4.5"
 memmem = "0.1.1"
-remove_dir_all = "0.7"
-simple_logger = "4.0"
+remove_dir_all = "1.0"
+simple_logger = "5.0"
 tar = "0.4"
 warp-args = { path = "../warp-args" }
