--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,6 +1,13 @@
-[target.aarch64-unknown-linux-gnu]
-linker = "aarch64-linux-gnu-gcc"
-
 [target.x86_64-apple-darwin]
 linker = "x86_64-apple-darwin16-clang"
 ar = "x86_64-apple-darwin16-ar"
+
+[target.aarch64-apple-darwin]
+linker = "aarch64-apple-darwin24.4-clang"
+ar = "aarch64-apple-darwin24.4-ar"
+
+[target.aarch64-unknown-linux-gnu]
+linker = "aarch64-linux-gnu-gcc"
+
+[target.aarch64-pc-windows-gnullvm]
+linker = "zig cc"
